[gd_scene load_steps=2 format=3 uid="uid://bbgwhsfyw5xdo"]

[ext_resource type="Script" path="res://Scenes/death_screen.gd" id="1_uvahm"]

[node name="ClassicDeathScreen" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_uvahm")
classic_scene = "res://Scenes/classic.tscn"
menu_scene = "res://Scenes/menu.tscn"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = -64.0
offset_right = 69.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "LOL YOU DIED?!!?!"

[node name="PlayAgain" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play Again"

[node name="Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Menu"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
